{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 105,
  "lineage": "60bbe2ae-762e-6c4e-ca65-013099f4d64a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:597619206507:instance/i-04e01cdbfade6aaf6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e01cdbfade6aaf6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-007c252f11ae12a4f"
              }
            ],
            "primary_network_interface_id": "eni-007c252f11ae12a4f",
            "private_dns": "ip-10-1-3-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.144",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:597619206507:key/816572ce-a638-4046-b7d3-d8b4cb91b2d9",
                "throughput": 125,
                "volume_id": "vol-067f240a5d875e263",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2bda7183720e902",
            "tags": {
              "Name": "dev-private-ec2-1"
            },
            "tags_all": {
              "Name": "dev-private-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a463f1e8fcfa6542"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.private_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:597619206507:instance/i-09e3a7ec840d8af28",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e3a7ec840d8af28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-039d86f0315295c36"
              }
            ],
            "primary_network_interface_id": "eni-039d86f0315295c36",
            "private_dns": "ip-10-1-3-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.164",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:597619206507:key/816572ce-a638-4046-b7d3-d8b4cb91b2d9",
                "throughput": 125,
                "volume_id": "vol-0187caa12d3601cde",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2bda7183720e902",
            "tags": {
              "Name": "dev-private-ec2-2"
            },
            "tags_all": {
              "Name": "dev-private-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a463f1e8fcfa6542"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.private_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:597619206507:instance/i-0e67814a49e298351",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e67814a49e298351",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-030a6afa2b3970e37"
              }
            ],
            "primary_network_interface_id": "eni-030a6afa2b3970e37",
            "private_dns": "ip-10-1-1-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.241",
            "public_ip": "3.238.165.230",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:597619206507:key/816572ce-a638-4046-b7d3-d8b4cb91b2d9",
                "throughput": 125,
                "volume_id": "vol-09ff0a3f9666087a9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0579864bfe228bd98",
            "tags": {
              "Name": "dev-public-ec2-1"
            },
            "tags_all": {
              "Name": "dev-public-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031f69dfb27c61669"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:security-group/sg-0a463f1e8fcfa6542",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a463f1e8fcfa6542",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031f69dfb27c61669"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-private-ec2-sg",
            "name_prefix": "",
            "owner_id": "597619206507",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:security-group/sg-031f69dfb27c61669",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031f69dfb27c61669",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-public-ec2-sg",
            "name_prefix": "",
            "owner_id": "597619206507",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "net_eip",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f35d8572b826d3bd",
            "arn": "arn:aws:ec2:us-east-1:597619206507:elastic-ip/eipalloc-0f35d8572b826d3bd",
            "domain": "vpc",
            "id": "eipalloc-0f35d8572b826d3bd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-94-211-235.compute-1.amazonaws.com",
            "public_ip": "98.94.211.235",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Created_by": "Avinash",
              "Name": "dev-eip-1"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "dev-eip-1"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055bf801dca9301fa",
            "arn": "arn:aws:ec2:us-east-1:597619206507:elastic-ip/eipalloc-055bf801dca9301fa",
            "domain": "vpc",
            "id": "eipalloc-055bf801dca9301fa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-238-93.compute-1.amazonaws.com",
            "public_ip": "44.221.238.93",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Created_by": "Avinash",
              "Name": "dev-eip-2"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "dev-eip-2"
            }
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:internet-gateway/igw-0444b74ddfb36eee1",
            "id": "igw-0444b74ddfb36eee1",
            "owner_id": "597619206507",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f35d8572b826d3bd",
            "association_id": "eipassoc-0e2486dd31ea29ad6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03a92a9ca97738a08",
            "network_interface_id": "eni-00563fa1817114014",
            "private_ip": "10.1.1.80",
            "public_ip": "98.94.211.235",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0579864bfe228bd98",
            "tags": {
              "Name": "dev-nat-gw-1"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1"
            },
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055bf801dca9301fa",
            "association_id": "eipassoc-060ffdd8e10d6d9da",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-019d3059fbb645c5a",
            "network_interface_id": "eni-0541222a7d5d24c1f",
            "private_ip": "10.1.2.206",
            "public_ip": "44.221.238.93",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-076f001495ed050b3",
            "tags": {
              "Name": "dev-nat-gw-2"
            },
            "tags_all": {
              "Name": "dev-nat-gw-2"
            },
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:route-table/rtb-05d6fee3fe1fce300",
            "id": "rtb-05d6fee3fe1fce300",
            "owner_id": "597619206507",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03a92a9ca97738a08",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt-1"
            },
            "tags_all": {
              "Name": "dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:route-table/rtb-03a47952ae79af0ca",
            "id": "rtb-03a47952ae79af0ca",
            "owner_id": "597619206507",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019d3059fbb645c5a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt-2"
            },
            "tags_all": {
              "Name": "dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:route-table/rtb-034262b1e6f7cbf02",
            "id": "rtb-034262b1e6f7cbf02",
            "owner_id": "597619206507",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0444b74ddfb36eee1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt-1"
            },
            "tags_all": {
              "Name": "dev-public-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:route-table/rtb-057d60b46fac2f35a",
            "id": "rtb-057d60b46fac2f35a",
            "owner_id": "597619206507",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0444b74ddfb36eee1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt-2"
            },
            "tags_all": {
              "Name": "dev-public-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assocaition_pub",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa7962eda4c0a2c6",
            "region": "us-east-1",
            "route_table_id": "rtb-034262b1e6f7cbf02",
            "subnet_id": "subnet-0579864bfe228bd98"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e2a6dd7f56ec6ff",
            "region": "us-east-1",
            "route_table_id": "rtb-057d60b46fac2f35a",
            "subnet_id": "subnet-076f001495ed050b3"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associateion_pri",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a778d22c6f589061",
            "region": "us-east-1",
            "route_table_id": "rtb-05d6fee3fe1fce300",
            "subnet_id": "subnet-0f2bda7183720e902"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047ee83489af44207",
            "region": "us-east-1",
            "route_table_id": "rtb-03a47952ae79af0ca",
            "subnet_id": "subnet-0b119781a0971dd8b"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:subnet/subnet-0f2bda7183720e902",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2bda7183720e902",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597619206507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:subnet/subnet-0b119781a0971dd8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b119781a0971dd8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597619206507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-2"
            },
            "tags_all": {
              "Name": "dev-private-2"
            },
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:subnet/subnet-0579864bfe228bd98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0579864bfe228bd98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597619206507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:subnet/subnet-076f001495ed050b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076f001495ed050b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597619206507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-2"
            },
            "tags_all": {
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-0922748ebb498eaf0"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597619206507:vpc/vpc-0922748ebb498eaf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e4e03a52fbdb94f2",
            "default_route_table_id": "rtb-0b9636ee4e9e3087c",
            "default_security_group_id": "sg-0d5e9977ab890b232",
            "dhcp_options_id": "dopt-04e4885473ded49f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0922748ebb498eaf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9636ee4e9e3087c",
            "owner_id": "597619206507",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}